
Fixed a double-free in libscream.c.  Also some cleanups to the spec
file, and I fixed some missing return statements in non-void
functions.
----------------------------------------------------------------------
Tue Oct 22 23:02:28 2002                        Michael Jennings (mej)

Allow users to customize the Escreen current/active display colors.

Don't display the Escreen button if there's no Escreen menu defined.
----------------------------------------------------------------------
Thu Oct 24 23:54:46 2002                        Michael Jennings (mej)

Added bbar_dock and bbar_font directives to escreen context so that
users can alter the dock location and font of the Escreen buttonbar.

This should be it for feature additions and last-minute code changes.
I need to update the docs, but that's about it.
----------------------------------------------------------------------
Tue Oct 29 23:41:07 2002                        Michael Jennings (mej)

Documentation updates and last-minute cleanups.  Barring something
unexpected and disastrous, this is it for release.  So please make
sure it works and the docs are accurate. :-)
----------------------------------------------------------------------
Wed Oct 30 14:53:30 2002                        Michael Jennings (mej)

Make sure the Escreen README goes in the tarball.
----------------------------------------------------------------------
Thu Oct 31 11:52:59 2002                        Michael Jennings (mej)

Argh!  Last-minute discoveries....
----------------------------------------------------------------------
Mon Nov  4 16:28:17 2002                        Michael Jennings (mej)

Added XK_ISO_Left_Tab as an alias for XK_Tab, suggested by Jason
<jason@sdf.lonestar.org>.
----------------------------------------------------------------------
Mon Nov  4 17:33:00 2002                        Michael Jennings (mej)

Let's try that again, shall we?
----------------------------------------------------------------------